@@ -4304,9 +4304,37 @@ literal|1
 argument_list|)
 expr_stmt|;
 comment|// Minimum term docFreq in order to use the filterCache for that term.
-name|int
-name|defaultMinDf
-init|=
+if|if
+condition|(
+name|freq
+operator|.
+name|cacheDf
+operator|==
+operator|-
+literal|1
+condition|)
+block|{
+comment|// -1 means never cache
+name|minDfFilterCache
+operator|=
+name|Integer
+operator|.
+name|MAX_VALUE
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|freq
+operator|.
+name|cacheDf
+operator|==
+literal|0
+condition|)
+block|{
+comment|// default; compute as fraction of maxDoc
+name|minDfFilterCache
+operator|=
 name|Math
 operator|.
 name|max
@@ -4322,37 +4350,18 @@ literal|4
 argument_list|,
 literal|3
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 comment|// (minimum of 3 is for test coverage purposes)
-name|int
-name|minDfFilterCache
-init|=
-name|freq
-operator|.
-name|cacheDf
-operator|==
-literal|0
-condition|?
-name|defaultMinDf
-else|:
-name|freq
-operator|.
-name|cacheDf
-decl_stmt|;
-if|if
-condition|(
-name|minDfFilterCache
-operator|==
-operator|-
-literal|1
-condition|)
+block|}
+else|else
+block|{
 name|minDfFilterCache
 operator|=
-name|Integer
+name|freq
 operator|.
-name|MAX_VALUE
+name|cacheDf
 expr_stmt|;
-comment|// -1 means never cache
+block|}
 name|docs
 operator|=
 name|fcontext
